# mddj

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  RELEASING.md  changelog.rst  justfile  pyproject.toml  tox.ini  toxfile.py
.github/workflows/: build.yaml  publish.yaml  publish_testpypi.yaml
docs/: api_usage.rst  cli_usage.rst  conf.py  config.rst  index.rst
src/mddj/: __main__.py  _compat.py  _toml_path.py  _types.py  builder.py  cli.py  config.py  discovery.py  readers.py  writers.py
src/mddj/_cli/: state.py
src/mddj/_cli/read/: __init__.py  authors.py  classifiers.py  dependencies.py  description.py  import_names.py  import_namespaces.py  keywords.py  maintainers.py  name.py  optional_dependencies.py  requires_python.py  version.py
src/mddj/_cli/read/readthedocs/: __init__.py
src/mddj/_cli/read/sys/: __init__.py
src/mddj/_cli/read/tox/: __init__.py  list_versions.py  min_version.py
src/mddj/_cli/self/: __init__.py  version.py
src/mddj/_cli/write/: __init__.py  version.py
src/mddj/_internal/: _cached_methods.py  _cached_toml.py  _discovery.py  _readers.py  _types.py  _wheel_metadata.py  _writers.py
src/mddj/api/: __init__.py  _dj.py  config.py  discovery.py  main.py  reader.py  tox_reader.py  writer.py
src/mddj/api/reader/: __init__.py  _config.py  _errors.py  _main_reader.py  dynamic_package.py  dynamic_package_reader.py  readthedocs_reader.py  static_pyproject.py  static_pyproject_reader.py  system_info.py  system_info_reader.py  tox_reader.py
src/mddj/api/reader/readthedocs/: __init__.py  _config.py
src/mddj/api/writer/: __init__.py  _config.py  _main_writer.py
src/mddj/cli/: __init__.py  state.py
src/mddj/cli/read/: __init__.py  dependencies.py  requires_python.py  version.py
src/mddj/cli/read/tox/: __init__.py  list_versions.py  min_version.py
src/mddj/cli/self/: __init__.py  version.py
src/mddj/cli/write/: __init__.py  version.py
tests/: conftest.py
tests/acceptance/: conftest.py  test_dogfood.py  test_pyprojecttoml.py  test_setupcfg.py  test_tox.py
tests/acceptance/cli/read/: test_read_authors.py  test_read_classifiers.py  test_read_dependencies.py  test_read_description.py  test_read_import_namespaces.py  test_read_maintainers.py  test_read_name.py  test_read_optional_dependencies.py  test_read_requires_python.py  test_read_version.py  test_readthedocs.py  test_sys.py
tests/acceptance/cli/read/tox/: test_read_min_version.py  test_read_version_list.py
tests/acceptance/cli/write/: test_write_version.py
tests/unit/: test_cached_methods.py  test_discovery.py  test_parse_toml_path.py  test_read_pyproject_value.py  test_write_toml_value.py
tests/unit/api/: test_discovery.py  test_reader.py  test_sys_info.py
tests/unit/internal/: test_discovery.py
