[build-system]
requires = ["flit-core>=3.11"]
build-backend = "flit_core.buildapi"

[project]
name = "mddj"
version = "0.3.0"
description = 'A CLI for extracting python metadata from packages'
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = []
authors = [
  { name = "Stephen Rosen", email = "sirosen@globus.org" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  # although 'wheel' is not used directly, any use of non-isolated builds
  # will need it, so including it makes a wider range of usages work smoothly
  "wheel",
  "packaging",
  "build>=1.2.2",
  "pyproject_hooks>1",
  "click>=8.2.0",
  "tomlkit>=0.13.2",
  "typing_extensions; python_version<'3.13'",
]

[project.urls]
source = "https://github.com/sirosen/mddj"
changelog = "https://github.com/sirosen/mddj/blob/main/CHANGELOG.md"

[project.scripts]
mddj = "mddj._cli:main"


[tool.flit.sdist]
include = ["CHANGELOG.md", "tests/**/*.py", "tox.ini", ".flake8", "justfile"]
exclude = [".*", "src/**/.*"]


[tool.check-sdist]
git-only = ["RELEASING.md", ".gitignore"]

# remove default-ignore and sdist-only after check-sdist is fixed
# ref: https://github.com/henryiii/check-sdist/pull/130
default_ignore = false
sdist-only = ["*.dist-info"]

[tool.coverage.run]
parallel = true
source = ["mddj"]
[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages/",
]
[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    # the pragma to disable coverage
    "pragma: no cover",
    # don't complain if tests don't hit unimplemented methods/modes
    "raise NotImplementedError",
    # don't check on executable components of importable modules
    "if __name__ == .__main__.:",
    # mypy-only code segments
    "if t.TYPE_CHECKING:",
    # type-checking overloads
    "@t.overload"
]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false
files = ["src"]

[tool.isort]
profile = "black"
known_first_party = ["mddj"]
